--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "PORT=4000 nodemon app.js",
+    "start": "PORT=5000 nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.6",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "pug": "^2.0.4"
