--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.0",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.8.7",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
     "pug": "^2.0.4"
   }
 }
